Remove references to Azure SDKs